# hellobarrybui

./: .dockerignore  Dockerfile  Procfile  pyproject.toml  run.py
app/: __init__.py  routes.py
app/static/css/: style.css
app/templates/: about.html  base.html  index.html  projects.html
